lots of refactoring, but no real improvements

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="32dp"
+		android:padding="5dp"
 		android:text="-3"
 		android:textSize="18sp"
 		app:left_text="left"
